# galeed

./: INSTRUCTIONS.txt  README.md
benchmark_results/: README.md
benchmark_results/fakeptr/: graphs.py
benchmark_results/fakeptr/read_only/: 100000.csv  200000.csv  300000.csv  400000.csv  500000.csv  600000.csv
benchmark_results/fakeptr/read_write/: 100000.csv  200000.csv  300000.csv  400000.csv  500000.csv
benchmark_results/fakeptr/write_only/: 100000.csv  200000.csv  300000.csv  400000.csv  500000.csv  600000.csv
benchmark_results/firefox_mpk/: graph.py
benchmark_results/mpk_malloc/: graphs.py
benchmark_results/mpk_malloc/with_mpk/read/: 100000.csv  200000.csv  300000.csv  400000.csv  (+1 more)
firefox-patch/: README.md  galeed_patch.patch
libmpk/: README.md
libmpk/lib/: mpt.cc  pkey.cc
libmpk/lib/headers/: mpt.h  pkey.h
libmpk/lib/heap/: CMakeLists.txt  Makefile  mpk_heap.cc  pkey.h
mpk_malloc/: Cargo.toml  README.md  build.rs
mpk_malloc/src/: main.rs  toy.cpp
rust/: README.md
safe-rust-cpp-ffi/: README.md  llvm_ir_notes.txt
safe-rust-cpp-ffi/fake_ptr/: Cargo.toml  build.rs  build.sh
safe-rust-cpp-ffi/fake_ptr/fakeptr/: Cargo.toml
safe-rust-cpp-ffi/fake_ptr/fakeptr/src/: lib.rs
safe-rust-cpp-ffi/fake_ptr/fakify_proc_macro/: Cargo.toml
safe-rust-cpp-ffi/fake_ptr/fakify_proc_macro/src/: lib.rs
safe-rust-cpp-ffi/fake_ptr/src/: libfake_ptr.h  main.rs  scheduling.cpp  uses_fakeptr_original.cpp  uses_fakeptr_safe.cpp
safe-rust-cpp-ffi/llvm-pass/: CMakeLists.txt
safe-rust-cpp-ffi/llvm-pass/fakeptr/: CMakeLists.txt  FakePtrPass.cpp
(+46 files in other folders)
