[package]
name = "fakify_proc_macro"
version = "0.1.0"
authors = ["Elijah Rivera <eerivera@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0"
quote = "1.0"
fakeptr = {path = "../fakeptr"}
proc-macro2 = "1.0"

[lib]
proc-macro = true
